TableGroup Authentication [color: #CA4242] {
  User
  AuthSession
  UserRequest
}

Enum UserRequestType {
  password
}

Table User {
  uuid uuid pk

  email string unique
  phone string [null]
  password string

  firstname string
  lastname string
  address string

  createdAt datetime
  updatedAt datetime
  deletedAt datetime [null]
}

Table AuthSession {
  token uuid pk
  userUuid uuid pk [ref: < User.uuid]
  createdAt datetime
  expiresAt datetime
  revokedAt datetime [null]
}

Table UserRequest {
  code uuid pk
  userUuid uuid pk [ref: < User.uuid]
  type UserRequestType
  requestedAt datetime
  expiresAt datetime
  usedAt datetime [null]
}
